Fix title alignment in grid

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -721,6 +721,7 @@ ul.gn-resultview {
         vertical-align: middle;
         letter-spacing: normal;
         border: none;
+        width: 100%;
       }
 
     }
